# VideoGenerate

./: README.md  pyproject.toml
MyCode/: .gitignore  BaseService.py  Controller.py  Local_CompyUI.py  Setting.py  SumService.py  changeModel.py  result.txt  sqlManager.py  test.py  video_contracts.py  video_creation.py  video_repository.py  video_service.py
MyCode/config/: music_catalog.py  style_catalog.py
MyCode/core/contracts/: audio.py  video.py
MyCode/core/repositories/: video_repository.py
MyCode/core/services/: audio_generation_service.py  video_creation_service.py  video_query_service.py
MyCode/entity/: VideoEntity.py
MyCode/prompt/: article_text_generate.txt  picture_generate.txt  remote  role.txt  style.txt
MyCode/service/: TextScene.py
MyCode/static/: index.html
MyCode/test/: AlibabaImageQwen.py  test.py
MyCode/util/: SceneParser.py  SceneParserService.py
MyCode/util/Audio_requestUtil/: Base_Audio_Util.py  Edge_TTS_Util.py  TTS_Util.py
MyCode/util/Image_Generate_Util/: Base_CompyUI_Generate_Util.py  Base_Direct_Generate_Util.py  Base_Image_Generate_Util.py  Base_Video_Generate_Util.py  Base_Video_Util.py  Gemini_generate.py  GetPathFromPrompt_ID.py  Local_Image_WorkFlow.py  a.json  dircect_generate.py  down.py  generate_Image.py  image2image.py
MyCode/util/Music_Chioce_Util/: Music_Util.py
story/: 1.txt
tests/: test_audio_generation_service.py  test_controller_add_subtitle.py  test_prompt_library.py  test_result_paths.py  test_sql_manager.py  test_video_creation_service.py  test_video_query_service.py  test_video_repository.py
(+12 files in other folders)
